# posts_api

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
posts/management/commands/: create_test_data.py
posts/migrations/: 0001_initial.py
posts/tests/: test_models.py  test_permissions.py  test_posts.py  test_serializers.py  test_validators.py  test_views.py
